--- a/data/.htaccess
+++ b/data/.htaccess
@@ -1,3 +1,8 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule .* index.php/$0 [L]
+
+
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept"
+Header set Access-Control-Allow-Methods "GET, PUT, POST, DELETE, OPTIONS"
